// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a readOnly multiselect from widget properties 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root css-1w4f2vw-MuiFormControl-root-propertySection"
    >
      <div
        class="css-2huy39-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
          >
            MultiSelectLabel
          </h6>
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-95nkiw-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          data-testid="MultiSelectLabel"
        >
          <div
            aria-disabled="true"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-standard Mui-disabled MuiSelect-multiple MuiInputBase-input MuiInput-input Mui-disabled css-gu5cht-MuiSelect-select-MuiInputBase-input-MuiInput-input-style"
            role="combobox"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            disabled=""
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard Mui-disabled css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect help hint 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root css-1w4f2vw-MuiFormControl-root-propertySection"
    >
      <div
        class="css-2huy39-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
          >
            MultiSelectLabel
          </h6>
          <div
            class="css-vrp56w-decorators"
          >
            <svg
              aria-hidden="true"
              aria-label=""
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-25to7p-MuiSvgIcon-root"
              data-mui-internal-clone-element="true"
              data-testid="HelpOutlineOutlinedIcon"
              focusable="false"
              style="margin-left: 8px; font-size: 16px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-95nkiw-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          data-testid="MultiSelectLabel"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-standard MuiSelect-multiple MuiInputBase-input MuiInput-input css-1sf8xgb-MuiSelect-select-MuiInputBase-input-MuiInput-input-style"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root css-1w4f2vw-MuiFormControl-root-propertySection"
    >
      <div
        class="css-2huy39-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
          >
            MultiSelectLabel
          </h6>
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-95nkiw-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          data-testid="MultiSelectLabel"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-standard MuiSelect-multiple MuiInputBase-input MuiInput-input css-1sf8xgb-MuiSelect-select-MuiInputBase-input-MuiInput-input-style"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root css-1w4f2vw-MuiFormControl-root-propertySection"
    >
      <div
        class="css-2huy39-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
          >
            MultiSelectLabel
          </h6>
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-95nkiw-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          data-testid="MultiSelectLabel"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-standard MuiSelect-multiple MuiInputBase-input MuiInput-input css-gu5cht-MuiSelect-select-MuiInputBase-input-MuiInput-input-style"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`should render the multiSelect without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root css-1w4f2vw-MuiFormControl-root-propertySection"
    >
      <div
        class="css-2huy39-propertySectionLabel"
      >
        <div
          class="css-1ccipwk-propertySectionLabel"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1rf0rca-MuiTypography-root-typography"
          >
            MultiSelectLabel
          </h6>
        </div>
      </div>
      <div
        class="css-19oeos1-propertySectionWidget"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiSelect-root css-95nkiw-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          data-testid="MultiSelectLabel"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="MuiSelect-select MuiSelect-standard MuiSelect-multiple MuiInputBase-input MuiInput-input css-1sf8xgb-MuiSelect-select-MuiInputBase-input-MuiInput-input-style"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-hidden="true"
              class="notranslate"
            >
              ​
            </span>
          </div>
          <input
            aria-hidden="true"
            aria-invalid="false"
            class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
            tabindex="-1"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1gpuzre-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
        />
      </div>
    </div>
  </div>
</body>
`;
